change header and hero section

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,28 +8,15 @@ import { Icon } from 'astro-icon'
   <SkipLinks />
   <Navigation>
     <li class="menu-item">
-      <a href="/">Home</a>
+      <a href="/">Accueil</a>
     </li>
     <li class="menu-item">
-      <a href="/blog/">Blog</a>
-    </li>
-    <li class="menu-item has-dropdown">
-      <button aria-haspopup="true" aria-expanded="false">Example Pages</button>
-      <ul class="dropdown-menu">
-        <li class="submenu-item">
-          <a href="/mdx-page/">MDX Page</a>
-        </li>
-        <li class="submenu-item">
-          <a href="/markdown-page/">Markdown Page</a>
-        </li>
-        <li class="submenu-item">
-          <a href="/accessible-components">Accessible Components</a>
-        </li>
-      </ul>
+      <a href="/blog/">La carte</a>
     </li>
     <li class="menu-item">
-      <a href="https://accessible-astro.dev" title="external link" rel="external noopener noreferrer">External Link</a>
+      <a href="/contact/">Contact</a>
     </li>
+
     <li class="menu-item type-icon">
       <a href="https://github.com/markteekman/accessible-astro-starter" title="Go to the GitHub page">
         <Icon pack="ion" name="logo-github" />
