--- a/src/layouts/DefaultLayout.astro
+++ b/src/layouts/DefaultLayout.astro
@@ -6,11 +6,11 @@ import Header from '../components/Header.astro'
 import Footer from '../components/Footer.astro'
 
 const {
-  title = 'Astro',
-  description = 'A starter project with accessibility features using Astro static site builder. Contains accessible landmarks, skip links, a dark mode color scheme, better focus outline and keyboard menu navigation.',
+  title = 'Yogi Food',
+  description = 'La street food coréenne à Amiens, saine et gourmande !',
   url,
   image = '/social-preview-image.png',
-  author = 'Mark Teekman',
+  author = 'NeoDesign',
 } = Astro.props
 ---
 
