--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -4,24 +4,24 @@ import { Icon } from 'astro-icon'
 const { src = '/astronaut-hero-img.webp' } = Astro.props
 ---
 
-<section class="hero my-24">
+<section class="my-24 hero">
   <div class="container">
-    <div class="grid grid-cols-1 items-center gap-24 lg:grid-cols-2">
+    <div class="grid items-center grid-cols-1 gap-24 lg:grid-cols-2">
       <div class="flex flex-col items-center gap-8 md:items-start">
-        <h1 class="text-center text-6xl md:text-left lg:text-8xl">
-          <slot><span class="text-gradient">Accessible</span> Starter for Astro</slot>
+        <h1 class="text-6xl text-center md:text-left lg:text-8xl">
+          <slot><span class="text-gradient">Yogi Food</span>, la street food coréenne à Amiens</slot>
         </h1>
         <div class="flex flex-col gap-3 min-[500px]:flex-row">
           <a class="button has-icon" href="https://github.com/markteekman/accessible-astro-starter">
             <Icon pack="ion" name="star-outline" />
-            Star on GitHub
+            Commander
           </a>
           <a
             class="button has-icon color-secondary"
             href="https://github.com/markteekman/accessible-astro-starter/blob/main/README.md"
           >
             <Icon pack="ion" name="bookmark-outline" />
-            Read the Docs
+            Voir le menu
           </a>
         </div>
       </div>
