--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,15 +1,16 @@
 ---
 import ResponsiveToggle from './ResponsiveToggle.astro'
 import { DarkMode } from 'accessible-astro-components'
-import { Image } from "astro:assets"
-import logo from "../assets/img/logo.svg"
+import { Image } from 'astro:assets'
+import logo from '../assets/img/logo.svg'
 ---
 
-<div id="main-navigation" class="is-desktop py-8">
+<div id="main-navigation" class="py-8 is-desktop">
   <div class="container">
     <a href="/" class="flex items-center gap-2 !no-underline">
       <Image src={logo} alt="Your Logo" width="47" height="37" />
-      <span class="font-bold">Accessible Astro</span>
+      <!-- TODO: replace with real logo -->
+      <span class="font-bold">Yogi Food</span>
     </a>
     <div class="wrapper">
       <nav class="desktop-menu" aria-label="Main navigation desktop">
