--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,34 +10,25 @@ import ContentMedia from '../components/ContentMedia.astro'
   <Hero />
   <section class="my-64">
     <div class="container">
-      <h2 class="mb-16 text-6xl">Features</h2>
+      <h2 class="mb-16 text-6xl">Notre cuisine est</h2>
       <div class="grid grid-cols-1 gap-12 md:grid-cols-2 lg:grid-cols-3">
-        <Feature icon="mdi:tailwind" title="Tailwind CSS">
-          Use the power of Tailwind to greatly improve your productivity and enhance your developer workflow.
+        <Feature icon="ph:heart-bold" title="Saine">
+          La street food coréenne est saine, vous permettant de vous faire plaisir sans vous faire de mal.
         </Feature>
-        <Feature icon="mdi:wheelchair-accessibility" title="a11y Components">
-          17 components and counting, all tried and tested for the most optimal accessible experience for your visitors.
+        <Feature icon="ph:leaf-bold" title="De saison">
+          Nous n'utilisons que des produits de saison, pour vous garantir une fraîcheur optimale.
         </Feature>
-        <Feature icon="mdi:looks" title="Prettier">
-          Less worry about formatting your code, let the Astro Prettier integration do the heavy lifting.
+        <Feature icon="ph:fork-knife" title="Gourmande">
+          Nous vous proposons des plats gourmands, qui vous feront voyager en Corée.
         </Feature>
-        <Feature icon="mdi:eslint" title="ESLint">
-          Lint your code with strict a11y settings to ensure you stay on track with the WCAG standards.
+        <Feature icon="mdi:clock-fast" title="Rapide">
+          Si vous êtes préssé.e, pas d'inquiétude, nous vous servons en moins de 20 minutes.
         </Feature>
-        <Feature icon="mdi:book-open-page-variant" title="Blog">
-          This theme comes with a fully integrated blog, dynamic pages and SEO optimization.
+        <Feature icon="tabler:thumb-up" title="Pratique">
+          Nos plats sont pratiques : vous pouvez les manger sur place, à emporter ou en livraison.
         </Feature>
-        <Feature icon="mdi:language-markdown" title="Markdown & MDX">
-          Easily use .md and .mdx pages to build your websites or use it with Netlify CMS.
-        </Feature>
-        <Feature icon="mdi:theme-light-dark" title="Dark mode">
-          Fully integrated Dark mode gives your users the choice for their favorite viewing mode.
-        </Feature>
-        <Feature icon="mdi:cog" title="Design System">
-          The theme offers some very handy utilities to help you build your website faster.
-        </Feature>
-        <Feature icon="mdi:lighthouse" title="Lighthouse Scores">
-          Excellent lighthouse scores means your website will load faster and get better SEO rankings.
+        <Feature icon="emojione-monotone:face-savouring-delicious-food" title="Bonne">
+          Mais surtout, notre cuisine est bonne, et c'est bien là le plus important.
         </Feature>
       </div>
     </div>
