--- a/src/components/Counter.astro
+++ b/src/components/Counter.astro
@@ -1,8 +1,8 @@
 ---
-const { count, title, sub } = Astro.props
+const { count, title, sub, src } = Astro.props
 ---
 
-<div class="animate text-center">
+<div class="text-center animate">
   <p class="text-6xl font-bold">{count}</p>
   <p class="text-4xl font-semibold">{title}</p>
   <p class="text-2xl">{sub}</p>
