--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,14 +1,14 @@
 ---
 import { Icon } from 'astro-icon'
 
-const { src = '/astronaut-hero-img.webp' } = Astro.props
+const { src = '/bibimbab.jpg' } = Astro.props
 ---
 
-<section class="my-24 hero">
+<section class="hero my-24">
   <div class="container">
-    <div class="grid items-center grid-cols-1 gap-24 lg:grid-cols-2">
+    <div class="grid grid-cols-1 items-center gap-24 lg:grid-cols-2">
       <div class="flex flex-col items-center gap-8 md:items-start">
-        <h1 class="text-6xl text-center md:text-left lg:text-8xl">
+        <h1 class="text-center text-6xl md:text-left lg:text-8xl">
           <slot><span class="text-gradient">Yogi Food</span>, la street food coréenne à Amiens</slot>
         </h1>
         <div class="flex flex-col gap-3 min-[500px]:flex-row">
@@ -25,7 +25,7 @@ const { src = '/astronaut-hero-img.webp' } = Astro.props
           </a>
         </div>
       </div>
-      <img class="hidden lg:block" src={src} alt="" decoding="async" />
+      <img class="hidden aspect-square rounded-lg lg:block" src={src} alt="" decoding="async" />
     </div>
   </div>
 </section>
