--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -2,14 +2,14 @@
 import ResponsiveToggle from './ResponsiveToggle.astro'
 import { DarkMode } from 'accessible-astro-components'
 import { Image } from 'astro:assets'
-import logo from '../assets/img/logo.svg'
+import logo from '../assets/img/logo-yogi-food.png'
 ---
 
 <div id="main-navigation" class="py-8 is-desktop">
   <div class="container">
     <a href="/" class="flex items-center gap-2 !no-underline">
-      <Image src={logo} alt="Your Logo" width="47" height="37" />
-      <!-- TODO: replace with real logo -->
+      <Image src={logo} alt="Yogi Food logo" width="47" height="47" />
+      <!-- TODO: make the logo look better -->
       <span class="font-bold">Yogi Food</span>
     </a>
     <div class="wrapper">
