--- a/src/layouts/DefaultLayout.astro
+++ b/src/layouts/DefaultLayout.astro
@@ -46,12 +46,12 @@ const {
         --radius-large: 6px;
         --gap-default: 2rem;
         --font-measure: 70ch;
-        --font-family-default: 'Open Sans', sans-serif;
-        --font-family-special: 'Open Sans', sans-serif;
+        --font-family-default: 'Verdana', sans-serif;
+        --font-family-special: 'Ephesus Extrabold', sans-serif;
         // light theme
         --font-color: var(--neutral-900);
-        --action-color: var(--primary-100);
-        --action-color-state: var(--primary-300);
+        --action-color: var(--primary-300);
+        --action-color-state: var(--primary-200);
         --background: var(--neutral-100);
         --primary-background: var(--primary-100);
         --neutral-background: var(--neutral-200);
@@ -60,8 +60,8 @@ const {
       // dark color scheme overrides
       .darkmode {
         --font-color: var(--neutral-100);
-        --action-color: var(--secondary-100);
-        --action-color-state: var(--secondary-500);
+        --action-color: var(--secondary-300);
+        --action-color-state: var(--secondary-200);
         --background: var(--dark-100);
         --primary-background: var(--primary-500);
         --neutral-background: var(--neutral-900);
