--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,18 +41,19 @@ import tteokbokki from '../../public/tteokbokki.jpg'
     <ContentMedia imgSrc="/bibimbab.jpg">
       <h2>Bibimbab</h2>
       <p class="text-2xl">
-        This theme provides plenty of tried and tested Accessible Astro Components. Some are native to this theme and a
-        lot of others are integrated using a <a href="https://github.com/markteekman/accessible-astro-components"
-          >separate package</a
-        >. They'll get you up and running in building an accessible solution for your visitors.
+        Le Bibimbap est un plat coréen composé de riz, légumes sautés, viande (souvent du bœuf), un œuf et sauce
+        gochujang (piquante). Les ingrédients sont disposés sur le riz, offrant une présentation colorée. Servi dans un
+        bol normal ou un dolsot (bol en pierre chaud), ce plat est connu pour sa personnalisation et ses saveurs
+        mélangées avant de manger.
       </p>
     </ContentMedia>
     <ContentMedia imgSrc="/bulgogi.jpg" reverseImg={true}>
       <h2>Bulgogi</h2>
       <p class="text-2xl">
-        Using semantic HTML, landmarks, skip links, screen reader friendly content, aria-labels, keyboard accessible
-        navigation and components, clear outlines and tab indicators and the right color contrast, you're more certain
-        of reaching WCAG AA compliance.
+        Le Bulgogi est un plat coréen constitué de fines tranches de bœuf marinées dans une sauce sucrée et savoureuse à
+        base de soja, de sucre, d'ail et de sésame. Cette viande est ensuite grillée ou sautée, ce qui lui donne une
+        texture tendre et un goût riche. Bulgogi est souvent servi avec du riz et des légumes, et est apprécié pour sa
+        saveur douce mais profonde.
       </p>
     </ContentMedia>
   </div>
