--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -9,8 +9,8 @@ const currentYear = new Date().getFullYear()
   <section class="py-8">
     <div class="container">
       <p>
-        &copy; {currentYear} - Starter Theme for <a href="https://astro.build/">Astro</a>. Made with ❤️ by <a
-          href="https://github.com/markteekman">Mark Teekman</a
+        &copy; {currentYear} - Développé avec ❤️ à Amiens par <a
+          href="https://agenceneodesign.com">NeoDesign</a
         >.
       </p>
     </div>
