--- a/src/components/CallToAction.astro
+++ b/src/components/CallToAction.astro
@@ -1,14 +1,19 @@
 <div class="container">
-  <div class="call-to-action mb-32 mt-24 flex flex-col items-center gap-12 rounded-xl p-12 md:p-24">
-    <h2 class="text-center text-3xl md:text-5xl">Commandez votre plat dès maintenant</h2>
-    <a href="https://github.com/markteekman/accessible-astro-starter" class="text-center text-lg"> Je commande</a>
+  <div class="flex flex-col items-center gap-12 p-12 mt-24 mb-32 call-to-action rounded-xl md:p-24">
+    <h2 class="text-3xl text-center md:text-5xl">Commandez votre plat dès maintenant</h2>
+    <a
+      href="https://deliveroo.fr/fr/menu/Amiens/saint-germain-les-halles-saint-leu-notre-dame/yogi-19-rue-de-metz?geohash=u0ceggbg1c5e"
+      class="text-lg text-center"
+    >
+      Je commande</a
+    >
   </div>
 </div>
 
 <style lang="scss">
   .call-to-action {
     color: var(--neutral-900);
-    background-image: linear-gradient(40deg, var(--primary-100), var(--secondary-200));
+    background-image: linear-gradient(40deg, var(--primary-400), var(--primary-400));
   }
 
   .call-to-action a:not(button),
