--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -4,27 +4,30 @@ import { Icon } from 'astro-icon'
 const { src = '/bibimbab.jpg' } = Astro.props
 ---
 
-<section class="hero my-24">
+<section class="my-24 hero">
   <div class="container">
-    <div class="grid grid-cols-1 items-center gap-24 lg:grid-cols-2">
+    <div class="grid items-center grid-cols-1 gap-24 lg:grid-cols-2">
       <div class="flex flex-col items-center gap-8 md:items-start">
-        <h1 class="text-center text-6xl md:text-left lg:text-8xl">
+        <h1 class="text-6xl text-center md:text-left lg:text-8xl">
           <slot
             ><span class="text-gradient">Yogi Food</span>, la street food <span class="text-gradient">coréenne</span> à Amiens</slot
           >
         </h1>
         <div class="flex flex-col gap-3 min-[500px]:flex-row">
-          <a class="button has-icon" href="https://github.com/honocoder">
+          <a
+            class="button has-icon"
+            href="https://deliveroo.fr/fr/menu/Amiens/saint-germain-les-halles-saint-leu-notre-dame/yogi-19-rue-de-metz?geohash=u0ceggbg1c5e"
+          >
             <Icon pack="ic" name="outline-food-bank" />
             Commander
           </a>
-          <a class="button has-icon color-primary" href="https://github.com/honocoder">
+          <a class="button has-icon color-primary" href="/carte">
             <Icon pack="jam" name="document" />
             Voir le menu
           </a>
         </div>
       </div>
-      <img class="hidden aspect-square rounded-lg lg:block" src={src} alt="" decoding="async" />
+      <img class="hidden rounded-lg aspect-square lg:block" src={src} alt="" decoding="async" />
     </div>
   </div>
 </section>
