--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -324,7 +324,7 @@ import logo from '../assets/img/logo-yogi-food.png'
         padding: 0;
         margin-top: -1px;
         border: none;
-        color: var(--action-color);
+        color: var(--primary-400);
 
         &:hover {
           color: var(--action-color-state);
@@ -386,7 +386,7 @@ import logo from '../assets/img/logo-yogi-food.png'
     }
 
     svg path {
-      fill: var(--action-color);
+      fill: var(--primary-400);
       transition: fill 0.2s ease-in-out;
     }
 
