make some changes, add links on menu, change hero photo and spotlighted dishes

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -40,7 +40,9 @@ import tteokbokki from './assets/img/tteokbokki.jpg'
 
   <div class="container">
     <h2 class="mb-2 text-6xl">Nos plats phares</h2>
-    <ContentMedia imgSrc="/bibimbab.jpg">
+    <ContentMedia
+      imgSrc="https://res.cloudinary.com/jimymltta/image/upload/v1705073726/Yogi%20Food/BibimBap_cvgb9k.jpg"
+    >
       <h2>Bibimbab</h2>
       <p class="text-2xl">
         Le Bibimbap est un plat coréen composé de riz, légumes sautés, viande (souvent du bœuf), un œuf et sauce
@@ -49,13 +51,16 @@ import tteokbokki from './assets/img/tteokbokki.jpg'
         mélangées avant de manger.
       </p>
     </ContentMedia>
-    <ContentMedia imgSrc="/bulgogi.jpg" reverseImg={true}>
-      <h2>Bulgogi</h2>
+    <ContentMedia
+      imgSrc="https://res.cloudinary.com/jimymltta/image/upload/v1705073726/Yogi%20Food/Ddeokbokki_porx6d.jpg"
+      reverseImg={true}
+    >
+      <h2>Ddeokbokki</h2>
       <p class="text-2xl">
-        Le Bulgogi est un plat coréen constitué de fines tranches de bœuf marinées dans une sauce sucrée et savoureuse à
-        base de soja, de sucre, d'ail et de sésame. Cette viande est ensuite grillée ou sautée, ce qui lui donne une
-        texture tendre et un goût riche. Le Bulgogi est souvent servi avec du riz et des légumes, et est apprécié pour
-        sa saveur douce mais profonde.
+        Le Ddeokbokki est un plat populaire coréen composé de gâteaux de riz longs et cylindriques, épicés et enrobés
+        d'une sauce rouge épaisse et sucrée. Ce plat est souvent agrémenté d'autres ingrédients comme des œufs durs, des
+        oignons verts, et parfois des nouilles de poisson, offrant un mélange unique de saveurs piquantes et de textures
+        moelleuses.
       </p>
     </ContentMedia>
   </div>
@@ -63,11 +68,11 @@ import tteokbokki from './assets/img/tteokbokki.jpg'
   <!-- <section class="mt-64 mb-32">
     <h2 class="mb-16 text-6xl">À remplacer par des photos de plats</h2>
     <div class="grid grid-cols-1 gap-12 sm:grid-cols-2 md:grid-cols-4"> -->
-      <!-- <Counter count="130" src={} title="Plat 1" sub="On GitHub" />
+  <!-- <Counter count="130" src={} title="Plat 1" sub="On GitHub" />
       <Counter count="17" src={} title="Plat 2" sub="Components" />
       <Counter count="500" src={} title="Plat 3" sub="Merged" />
       <Counter count="18+" src={} title="Plat 4" sub="Since launch" /> -->
-      <!-- <Media src={tteokbokki} class="rounded-lg aspect-square" /> -->
-    <!-- </div>
+  <!-- <Media src={tteokbokki} class="rounded-lg aspect-square" /> -->
+  <!-- </div>
   </section> -->
 </DefaultLayout>
