--- a/src/components/CallToAction.astro
+++ b/src/components/CallToAction.astro
@@ -1,12 +1,15 @@
 <div class="container">
   <div class="flex flex-col items-center gap-12 p-12 mt-24 mb-32 call-to-action rounded-xl md:p-24">
     <h2 class="text-3xl text-center md:text-5xl">Commandez votre plat dès maintenant</h2>
-    <a
-      href="https://deliveroo.fr/fr/menu/Amiens/saint-germain-les-halles-saint-leu-notre-dame/yogi-19-rue-de-metz?geohash=u0ceggbg1c5e"
-      class="text-lg text-center"
-    >
-      Je commande</a
-    >
+    <div class="flex md:flex-rows md:gap-4">
+      <a href="/contact" class="text-lg text-center"> Je commande par téléphone</a>
+      <a
+        href="https://deliveroo.fr/fr/menu/Amiens/saint-germain-les-halles-saint-leu-notre-dame/yogi-19-rue-de-metz?geohash=u0ceggbg1c5e"
+        class="text-lg text-center"
+      >
+        Je commande sur Deliveroo</a
+      >
+    </div>
   </div>
 </div>
 
