--- a/src/components/ContentMedia.astro
+++ b/src/components/ContentMedia.astro
@@ -7,7 +7,7 @@ const { imgSrc, reverseImg = false } = Astro.props
 <section class="my-32">
   <div class="container">
     <div class="grid grid-cols-1 gap-24 md:grid-cols-2">
-      {!reverseImg ? <Media class="aspect-square rounded-lg" src={imgSrc} /> : ''}
+      {!reverseImg ? <Media class="aspect-square rounded-lg object-cover" src={imgSrc} /> : ''}
       <div class="space-content flex flex-col justify-center">
         <slot />
       </div>
