change header, add season page and change to light mode by default

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -14,6 +14,9 @@ import { Icon } from 'astro-icon'
       <a href="/carte/">La carte</a>
     </li>
     <li class="menu-item">
+      <a href="/saison/">Plats de saison</a>
+    </li>
+    <li class="menu-item">
       <a href="/contact/">Contact</a>
     </li>
 
@@ -28,6 +31,7 @@ import { Icon } from 'astro-icon'
         </div>
       </a>
     </li>
+    <a href="tel:0322809316">03 22 80 93 16</a>
   </Navigation>
 </header>
 
