--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -8,9 +8,14 @@ import logo from '../assets/img/logo-yogi-food.png'
 <div id="main-navigation" class="py-8 is-desktop">
   <div class="container">
     <a href="/" class="flex items-center gap-2 !no-underline">
-      <Image src={logo} alt="Yogi Food logo" width="47" height="47" />
+      <Image
+        src="https://res.cloudinary.com/jimymltta/image/upload/v1705401603/Yogi%20Food/Logo_YOGI_sans_fond_dxl6pb.png"
+        alt="Logo YOGI"
+        width="50"
+        height="50"
+      />
       <!-- TODO: make the logo look better -->
-      <span class="font-bold">Yogi Food</span>
+      <span class="font-bold">YOGI</span>
     </a>
     <div class="wrapper">
       <nav class="desktop-menu" aria-label="Main navigation desktop">
