--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -5,14 +5,14 @@ import Map from '../components/Map.astro'
 ---
 
 <DefaultLayout>
-  <div class="mx-14 my-10">
+  <div class="my-10 mx-14">
     <h1 class="mb-10">Contact</h1>
     <div class="mx-auto">
       <ContactForm />
     </div>
 
-    <div class="mt-10 flex">
-      <div class="flex w-2/3 flex-col justify-center">
+    <div class="flex mt-10">
+      <div class="flex flex-col justify-center w-2/3">
         <h5>Téléphone : 03 22 80 93 16</h5>
         <h5>Adresse : 19 rue de Metz, 80000 Amiens</h5>
         <h5>Horaires : du lundi au vendredi de 12h à 15h et 17h à 22h</h5>
