change YOGI in hero

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -11,7 +11,7 @@ const { src = 'https://res.cloudinary.com/jimymltta/image/upload/v1705073726/Yog
       <div class="flex flex-col items-center gap-8 md:items-start">
         <h1 class="text-center text-6xl md:text-left lg:text-8xl">
           <slot
-            ><span class="text-gradient">Yogi Food</span>, la street food <span class="text-gradient">coréenne</span> à Amiens</slot
+            ><span class="text-gradient">YOGI</span>, la street food <span class="text-gradient">coréenne</span> à Amiens</slot
           >
         </h1>
         <div class="flex flex-col gap-3 min-[500px]:flex-row">
