--- a/src/assets/scss/base/_font.scss
+++ b/src/assets/scss/base/_font.scss
@@ -81,7 +81,7 @@ body {
     text-decoration: underline;
 
     &:visited {
-      color: var(--action-color);
+      color: var(--primary-400);
     }
 
     &:hover,
