--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -279,6 +279,7 @@ import logo from '../assets/img/logo-yogi-food.png'
           font-size: 1.125rem;
           line-height: 1.6875rem;
           transition: color 0.15s ease-in-out;
+          color: var(--primary-400);
         }
 
         a:hover,
@@ -332,10 +333,10 @@ import logo from '../assets/img/logo-yogi-food.png'
         color: var(--primary-400);
 
         &:hover {
-          color: var(--action-color-state);
+          color: var(--primary-400);
 
           &::after {
-            border-color: var(--action-color-state);
+            border-color: var(--primary-400);
           }
         }
 
@@ -346,7 +347,7 @@ import logo from '../assets/img/logo-yogi-food.png'
           margin-top: -0.25rem;
           border-style: solid;
           border-width: 0.2em 0.2em 0 0;
-          border-color: var(--action-color);
+          border-color: var(--primary-400);
           transform: rotate(135deg);
         }
 
@@ -397,7 +398,7 @@ import logo from '../assets/img/logo-yogi-food.png'
 
     &:hover {
       svg path {
-        fill: var(--action-color-state);
+        fill: var(--primary-400);
       }
     }
 
