--- a/src/layouts/DefaultLayout.astro
+++ b/src/layouts/DefaultLayout.astro
@@ -6,7 +6,7 @@ import Header from '../components/Header.astro'
 import Footer from '../components/Footer.astro'
 
 const {
-  title = 'Yogi Food',
+  title = 'YOGI',
   description = 'La street food coréenne à Amiens, saine et gourmande !',
   url,
   image = '/social-preview-image.png',
@@ -51,17 +51,17 @@ const {
         // light theme
         --font-color: var(--neutral-900);
         --action-color: var(--primary-400);
-        --action-color-state: var(--primary-200);
+        --action-color-state: var(--primary-400);
         --background: var(--neutral-100);
-        --primary-background: var(--primary-100);
+        --primary-background: var(--primary-400);
         --neutral-background: var(--neutral-200);
       }
 
       // dark color scheme overrides
       .darkmode {
         --font-color: var(--neutral-100);
-        --action-color: var(--secondary-300);
-        --action-color-state: var(--secondary-200);
+        --action-color: var(--secondary-400);
+        --action-color-state: var(--secondary-300);
         --background: var(--dark-100);
         --primary-background: var(--primary-500);
         --neutral-background: var(--neutral-900);
