--- a/src/components/Feature.astro
+++ b/src/components/Feature.astro
@@ -4,7 +4,7 @@ import { Icon } from 'astro-icon'
 const { icon = 'mdi:rocket', title = 'Title' } = Astro.props
 ---
 
-<div class="feature flex flex-col gap-4">
+<div class="flex flex-col gap-4 feature">
   <Icon name={icon} />
   <div class="content">
     <h3>{title}</h3>
@@ -47,7 +47,7 @@ const { icon = 'mdi:rocket', title = 'Title' } = Astro.props
     }
 
     &::after {
-      background-color: var(--action-color);
+      background-color: var(--primary-400);
       inset: 1rem -0.85rem -0.85rem 1rem;
       border-radius: 1rem;
       z-index: 0;
@@ -56,7 +56,7 @@ const { icon = 'mdi:rocket', title = 'Title' } = Astro.props
 
   :global(.feature [astro-icon]) {
     width: 4rem;
-    color: var(--action-color);
+    color: var(--primary-400);
   }
 
   :global(.darkmode .feature::before) {
