--- a/src/components/Feature.astro
+++ b/src/components/Feature.astro
@@ -4,7 +4,7 @@ import { Icon } from 'astro-icon'
 const { icon = 'mdi:rocket', title = 'Title' } = Astro.props
 ---
 
-<div class="flex flex-col gap-4 feature">
+<div class="feature flex flex-col gap-4">
   <Icon name={icon} />
   <div class="content">
     <h3>{title}</h3>
@@ -46,12 +46,12 @@ const { icon = 'mdi:rocket', title = 'Title' } = Astro.props
       z-index: 1;
     }
 
-    &::after {
-      background-color: var(--primary-400);
-      inset: 1rem -0.85rem -0.85rem 1rem;
-      border-radius: 1rem;
-      z-index: 0;
-    }
+    // &::after {
+    //   background-color: var(--primary-400);
+    //   inset: 1rem -0.85rem -0.85rem 1rem;
+    //   border-radius: 1rem;
+    //   z-index: 0;
+    // }
   }
 
   :global(.feature [astro-icon]) {
