--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,22 +16,22 @@ import tteokbokki from './assets/img/tteokbokki.jpg'
     <div class="container">
       <h2 class="mb-16 text-6xl">Notre cuisine est...</h2>
       <div class="grid grid-cols-1 gap-12 md:grid-cols-2 lg:grid-cols-3">
-        <Feature icon="ph:heart-bold" title="Saine">
+        <Feature icon="ph:heart-bold" title="SAINE">
           La street food coréenne est saine, vous permettant de vous faire plaisir sans vous faire de mal.
         </Feature>
-        <Feature icon="ph:leaf-bold" title="De saison">
+        <Feature icon="ph:leaf-bold" title="DE SAISON">
           Nous n'utilisons que des produits de saison, pour vous garantir une fraîcheur optimale.
         </Feature>
-        <Feature icon="ph:fork-knife" title="Gourmande">
+        <Feature icon="ph:fork-knife" title="GOURMANDE">
           Nous vous proposons des plats gourmands, qui vous feront voyager en Corée.
         </Feature>
-        <Feature icon="mdi:clock-fast" title="Rapide">
+        <Feature icon="mdi:clock-fast" title="RAPIDE">
           Si vous êtes préssé.e, pas d'inquiétude, nous vous servons en moins de 20 minutes.
         </Feature>
-        <Feature icon="tabler:thumb-up" title="Pratique">
+        <Feature icon="tabler:thumb-up" title="PRATIQUE">
           Nos plats sont pratiques : vous pouvez les manger sur place, à emporter ou en livraison.
         </Feature>
-        <Feature icon="emojione-monotone:face-savouring-delicious-food" title="Bonne">
+        <Feature icon="emojione-monotone:face-savouring-delicious-food" title="BONNE">
           Mais surtout, notre cuisine est bonne, et c'est bien là le plus important.
         </Feature>
       </div>
@@ -43,7 +43,7 @@ import tteokbokki from './assets/img/tteokbokki.jpg'
     <ContentMedia
       imgSrc="https://res.cloudinary.com/jimymltta/image/upload/v1705073726/Yogi%20Food/BibimBap_cvgb9k.jpg"
     >
-      <h2>Bibimbab</h2>
+      <h2>Bibimbab 비빔밥</h2>
       <p class="text-2xl">
         Le Bibimbap est un plat coréen composé de riz, légumes sautés, viande (souvent du bœuf), un œuf et sauce
         gochujang (piquante). Les ingrédients sont disposés sur le riz, offrant une présentation colorée. Servi dans un
@@ -55,7 +55,7 @@ import tteokbokki from './assets/img/tteokbokki.jpg'
       imgSrc="https://res.cloudinary.com/jimymltta/image/upload/v1705073726/Yogi%20Food/Ddeokbokki_porx6d.jpg"
       reverseImg={true}
     >
-      <h2>Ddeokbokki</h2>
+      <h2>Ddeokbokki 떡볶이</h2>
       <p class="text-2xl">
         Le Ddeokbokki est un plat populaire coréen composé de gâteaux de riz longs et cylindriques, épicés et enrobés
         d'une sauce rouge épaisse et sucrée. Ce plat est souvent agrémenté d'autres ingrédients comme des œufs durs, des
