--- a/src/layouts/DefaultLayout.astro
+++ b/src/layouts/DefaultLayout.astro
@@ -46,8 +46,8 @@ const {
         --radius-large: 6px;
         --gap-default: 2rem;
         --font-measure: 70ch;
-        --font-family-default: 'Verdana', sans-serif;
-        --font-family-special: 'Ephesus Extrabold', sans-serif;
+        --font-family-default: 'Open Sans Regular', sans-serif;
+        --font-family-special: 'Open Sans Extrabold', sans-serif;
         // light theme
         --font-color: var(--neutral-900);
         --action-color: var(--primary-400);
