--- a/src/assets/scss/base/_font.scss
+++ b/src/assets/scss/base/_font.scss
@@ -4,66 +4,66 @@
 
 @use 'breakpoint' as *;
 
-@font-face {
-  font-family: 'Ephesus Extrabold';
-  src: url('/fonts/Ephesus/Ephesus-Extrabold.woff2') format('woff2'),
-    url('/fonts/Ephesus/Ephesus-Extrabold.woff') format('woff');
-  font-weight: bold;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Verdana Regular';
-  src: url('/fonts/Verdana/verdana.woff2') format('woff2'), url('/fonts/Verdana/verdana.woff') format('woff');
-  font-weight: regular;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Verdana Bold';
-  src: url('/fonts/Verdana/verdana-bold.woff2') format('woff2'), url('/fonts/Verdana/verdana-bold.woff') format('woff');
-  font-weight: bold;
-  font-style: normal;
-  font-display: swap;
-}
-
 // @font-face {
-//   font-family: 'Open Sans';
-//   src: local('Open Sans ExtraBold'), local('OpenSans-ExtraBold'), url('/fonts/OpenSans-ExtraBold.woff2') format('woff2'),
-//     url('/fonts/OpenSans-ExtraBold.woff') format('woff');
+//   font-family: 'Ephesus Extrabold';
+//   src: url('/fonts/Ephesus/Ephesus-Extrabold.woff2') format('woff2'),
+//     url('/fonts/Ephesus/Ephesus-Extrabold.woff') format('woff');
 //   font-weight: bold;
 //   font-style: normal;
 //   font-display: swap;
 // }
 
 // @font-face {
-//   font-family: 'Open Sans';
-//   src: local('Open Sans Bold'), local('OpenSans-Bold'), url('/fonts/OpenSans-Bold.woff2') format('woff2'),
-//     url('/fonts/OpenSans-Bold.woff') format('woff');
+//   font-family: 'Verdana Regular';
+//   src: url('/fonts/Verdana/verdana.woff2') format('woff2'), url('/fonts/Verdana/verdana.woff') format('woff');
+//   font-weight: regular;
+//   font-style: normal;
+//   font-display: swap;
+// }
+
+// @font-face {
+//   font-family: 'Verdana Bold';
+//   src: url('/fonts/Verdana/verdana-bold.woff2') format('woff2'), url('/fonts/Verdana/verdana-bold.woff') format('woff');
 //   font-weight: bold;
 //   font-style: normal;
 //   font-display: swap;
 // }
 
-// @font-face {
-//   font-family: 'Open Sans';
-//   src: local('Open Sans Italic'), local('OpenSans-Italic'), url('/fonts/OpenSans-Italic.woff2') format('woff2'),
-//     url('/fonts/OpenSans-Italic.woff') format('woff');
-//   font-weight: normal;
-//   font-style: italic;
-//   font-display: swap;
-// }
+@font-face {
+  font-family: 'Open Sans';
+  src: local('Open Sans ExtraBold'), local('OpenSans-ExtraBold'), url('/fonts/OpenSans-ExtraBold.woff2') format('woff2'),
+    url('/fonts/OpenSans-ExtraBold.woff') format('woff');
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
 
-// @font-face {
-//   font-family: 'Open Sans';
-//   src: local('Open Sans Regular'), local('OpenSans-Regular'), url('/fonts/OpenSans-Regular.woff2') format('woff2'),
-//     url('/fonts/OpenSans-Regular.woff') format('woff');
-//   font-weight: normal;
-//   font-style: normal;
-//   font-display: swap;
-// }
+@font-face {
+  font-family: 'Open Sans';
+  src: local('Open Sans Bold'), local('OpenSans-Bold'), url('/fonts/OpenSans-Bold.woff2') format('woff2'),
+    url('/fonts/OpenSans-Bold.woff') format('woff');
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Open Sans';
+  src: local('Open Sans Italic'), local('OpenSans-Italic'), url('/fonts/OpenSans-Italic.woff2') format('woff2'),
+    url('/fonts/OpenSans-Italic.woff') format('woff');
+  font-weight: normal;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Open Sans';
+  src: local('Open Sans Regular'), local('OpenSans-Regular'), url('/fonts/OpenSans-Regular.woff2') format('woff2'),
+    url('/fonts/OpenSans-Regular.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
 
 body {
   font-family: var(--font-family-default);
