change primary color

--- a/src/assets/scss/base/_color.scss
+++ b/src/assets/scss/base/_color.scss
@@ -7,7 +7,7 @@ $colors: (
     100: hsl(339, 95%, 47%),
     200: hsl(339, 79%, 69%),
     300: hsl(339, 53%, 49%),
-    400: 	hsl(5, 71%, 44%),
+    400: #d40b0b,
     500: hsl(339, 96%, 20%),
   ),
   secondary: (
