--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -31,6 +31,13 @@ import { Icon } from 'astro-icon'
         </div>
       </a>
     </li>
+    <li class="menu-item type-icon type-icon-button">
+      <a href=" https://www.instagram.com/yogibon.france/" title="YOGI - Instagram">
+        <div class="icon-wrapper">
+          <Icon pack="mdi" name="instagram" />
+        </div>
+      </a>
+    </li>
     <a href="tel:0322809316">03 22 80 93 16</a>
   </Navigation>
 </header>
