capitalize text, add dishes, add à emporter mention on dockirak, change links, make white bg better

--- a/src/assets/scss/base/_font.scss
+++ b/src/assets/scss/base/_font.scss
@@ -78,7 +78,7 @@ body {
 
   a:not(.button) {
     color: var(--primary-400);
-    text-decoration: underline;
+    text-decoration: none;
 
     &:visited {
       color: var(--primary-400);
