--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,22 +17,22 @@ import tteokbokki from './assets/img/tteokbokki.jpg'
       <h2 class="mb-16 text-6xl">Notre cuisine est...</h2>
       <div class="grid grid-cols-1 gap-12 md:grid-cols-2 lg:grid-cols-3">
         <Feature icon="ph:heart-bold" title="SAINE">
-          La street food coréenne est saine, vous permettant de vous faire plaisir sans vous faire de mal.
+          LA STREET FOOD CORÉENNE EST SAINE, VOUS PERMETTANT DE VOUS FAIRE PLAISIR SANS VOUS FAIRE DE MAL.
         </Feature>
         <Feature icon="ph:leaf-bold" title="DE SAISON">
-          Nous n'utilisons que des produits de saison, pour vous garantir une fraîcheur optimale.
+          NOUS N'UTILISONS QUE DES PRODUITS DE SAISON, POUR VOUS GARANTIR UNE FRAÎCHEUR OPTIMALE.
         </Feature>
         <Feature icon="ph:fork-knife" title="GOURMANDE">
-          Nous vous proposons des plats gourmands, qui vous feront voyager en Corée.
+          NOUS VOUS PROPOSONS DES PLATS GOURMANDS, QUI VOUS FERONT VOYAGER EN CORÉE.
         </Feature>
         <Feature icon="mdi:clock-fast" title="RAPIDE">
-          Si vous êtes préssé.e, pas d'inquiétude, nous vous servons en moins de 20 minutes.
+          SI VOUS ÊTES PRÉSSÉ.E, PAS D'INQUIÉTUDE, NOUS VOUS SERVONS EN MOINS DE 20 MINUTES.
         </Feature>
         <Feature icon="tabler:thumb-up" title="PRATIQUE">
-          Nos plats sont pratiques : vous pouvez les manger sur place, à emporter ou en livraison.
+          NOS PLATS SONT PRATIQUES : VOUS POUVEZ LES MANGER SUR PLACE, À EMPORTER OU EN LIVRAISON.
         </Feature>
         <Feature icon="emojione-monotone:face-savouring-delicious-food" title="BONNE">
-          Mais surtout, notre cuisine est bonne, et c'est bien là le plus important.
+          MAIS SURTOUT, NOTRE CUISINE EST BONNE, ET C'EST BIEN LÀ LE PLUS IMPORTANT.
         </Feature>
       </div>
     </div>
