--- a/src/assets/scss/base/_color.scss
+++ b/src/assets/scss/base/_color.scss
@@ -19,7 +19,7 @@ $colors: (
   ),
   neutral: (
     100: hsl(0 0% 100%),
-    200: hsl(200 23% 97%),
+    200: #fffbf5,
     300: hsl(200 12% 95%),
     400: hsl(205 12% 88%),
     500: hsl(209 13% 83%),
